--- a/EA Waste Tonnage Returns/Logic Workflows/DMS/Upload Excel Return To DMS.xaml
+++ b/EA Waste Tonnage Returns/Logic Workflows/DMS/Upload Excel Return To DMS.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Upload_Excel_Return_To_DMS" this:Upload_Excel_Return_To_DMS.IN_strDocumentDate="28/08/2020" this:Upload_Excel_Return_To_DMS.IN_strReceivedDate="25/03/2021" this:Upload_Excel_Return_To_DMS.IN_strExternalAuthor="Marcey Winter" this:Upload_Excel_Return_To_DMS.IN_strDisclosureStatus="Public Register" this:Upload_Excel_Return_To_DMS.IN_strFullPermitNumber="401376" this:Upload_Excel_Return_To_DMS.IN_strDocumentUrl="/sites/EADMSRobotics1/LIB1/401376/Returns/Compliance Waste Returns Oct to Dec 2020.xls" this:Upload_Excel_Return_To_DMS.IN_strDocumentFilePath="C:\Users\Mewinter\Desktop\Working Directory\401376.xls" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:ss="clr-namespace:System.Security;assembly=mscorlib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:us="clr-namespace:UiPathTeam.SharePoint;assembly=UiPathTeam.SharePoint" xmlns:usa="clr-namespace:UiPathTeam.SharePoint.Activities;assembly=UiPathTeam.SharePoint.Activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Upload_Excel_Return_To_DMS" this:Upload_Excel_Return_To_DMS.IN_strWorkingDirectory="C:\Users\Mewinter\Desktop\Working Directory\" this:Upload_Excel_Return_To_DMS.IN_strAttachmentName="68506.xls" this:Upload_Excel_Return_To_DMS.IN_strDocumentDate="01/10/2020" this:Upload_Excel_Return_To_DMS.IN_strReceivedDate="15/04/2021" this:Upload_Excel_Return_To_DMS.IN_strExternalAuthor="Marcey Winter" this:Upload_Excel_Return_To_DMS.IN_strDisclosureStatus="Public Register" this:Upload_Excel_Return_To_DMS.IN_strFullPermitNumber="68506" this:Upload_Excel_Return_To_DMS.IN_strDocumentUrl="/sites/EADMSRobotics1/LIB1/68506/Returns/Compliance Waste Returns Jul to Sep 2021.xls" this:Upload_Excel_Return_To_DMS.IN_strDocumentFilePath="C:\Users\Mewinter\Desktop\Working Directory\68506.xls" this:Upload_Excel_Return_To_DMS.IN_strReturnPeriodForRename="Jul to Sep" this:Upload_Excel_Return_To_DMS.IN_strReturnYear="2021" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:ss="clr-namespace:System.Security;assembly=mscorlib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:us="clr-namespace:UiPathTeam.SharePoint;assembly=UiPathTeam.SharePoint" xmlns:usa="clr-namespace:UiPathTeam.SharePoint.Activities;assembly=UiPathTeam.SharePoint.Activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="IN_dictConfig" Type="InArgument(scg:Dictionary(x:String, ui:GenericValue))" />
     <x:Property Name="IN_strDMSUsername" Type="InArgument(x:String)" />
@@ -26,15 +26,6 @@
   <this:Upload_Excel_Return_To_DMS.IN_strDMSPassword>
     <InArgument x:TypeArguments="ss:SecureString" />
   </this:Upload_Excel_Return_To_DMS.IN_strDMSPassword>
-  <this:Upload_Excel_Return_To_DMS.IN_strWorkingDirectory>
-    <InArgument x:TypeArguments="x:String" />
-  </this:Upload_Excel_Return_To_DMS.IN_strWorkingDirectory>
-  <this:Upload_Excel_Return_To_DMS.IN_strAttachmentName>
-    <InArgument x:TypeArguments="x:String" />
-  </this:Upload_Excel_Return_To_DMS.IN_strAttachmentName>
-  <this:Upload_Excel_Return_To_DMS.IN_strReturnYear>
-    <InArgument x:TypeArguments="x:String" />
-  </this:Upload_Excel_Return_To_DMS.IN_strReturnYear>
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
@@ -176,13 +167,13 @@
               <av:PointCollection x:Key="ConnectorLocation">160,289.5 160,344</av:PointCollection>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <Sequence DisplayName="Get IN Args" sap:VirtualizedContainerService.HintSize="655,1482" sap2010:WorkflowViewState.IdRef="Sequence_2">
+          <Sequence DisplayName="Get IN Args" sap:VirtualizedContainerService.HintSize="200,66" sap2010:WorkflowViewState.IdRef="Sequence_2">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <If Condition="[IN_dictConfig Is Nothing]" sap:VirtualizedContainerService.HintSize="613,260" sap2010:WorkflowViewState.IdRef="If_1">
+            <If Condition="[IN_dictConfig Is Nothing]" sap:VirtualizedContainerService.HintSize="484,260" sap2010:WorkflowViewState.IdRef="If_1">
               <If.Then>
                 <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Workflow File" sap:VirtualizedContainerService.HintSize="334,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Data Workflows\Config Reader.xaml">
                   <ui:InvokeWorkflowFile.Arguments>
@@ -192,7 +183,7 @@
                 </ui:InvokeWorkflowFile>
               </If.Then>
             </If>
-            <If Condition="[IN_strDMSUsername Is Nothing]" sap:VirtualizedContainerService.HintSize="613,208" sap2010:WorkflowViewState.IdRef="If_3">
+            <If Condition="[IN_strDMSUsername Is Nothing]" sap:VirtualizedContainerService.HintSize="484,208" sap2010:WorkflowViewState.IdRef="If_3">
               <If.Then>
                 <ui:GetSecureCredential CredentialType="Generic" DisplayName="Get secure credential" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="GetSecureCredential_1" Password="[IN_strDMSPassword]" PersistanceType="Enterprise" Target="[strDMSHomeUrl]" Username="[IN_strDMSUsername]">
                   <sap:WorkflowViewStateService.ViewState>
@@ -203,29 +194,46 @@
                 </ui:GetSecureCredential>
               </If.Then>
             </If>
-            <If Condition="[browserDMS Is Nothing]" sap:VirtualizedContainerService.HintSize="613,450" sap2010:WorkflowViewState.IdRef="If_4">
-              <If.Then>
-                <usa:SharepointApplicationScope ClientContext="{x:Null}" LoginTimeout="{x:Null}" Password="{x:Null}" DisplayName="Sharepoint application scope" sap:VirtualizedContainerService.HintSize="468,302" sap2010:WorkflowViewState.IdRef="SharepointApplicationScope_1" QueryGrouping="False" ResetCredentials="False" SecurePassword="[IN_strDMSPassword]" SharePointInstanceType="Online" URL="[strDMSHomeUrl]" UserName="[IN_strDMSUsername]">
-                  <usa:SharepointApplicationScope.Body>
-                    <ActivityAction x:TypeArguments="us:SharePointContextInfo">
-                      <ActivityAction.Argument>
-                        <DelegateInArgument x:TypeArguments="us:SharePointContextInfo" Name="SharePointContextInfoTag" />
-                      </ActivityAction.Argument>
-                      <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" BrowserType="IE" DisplayName="Attach Browser 'iexplore.exe Document'" sap:VirtualizedContainerService.HintSize="434,161" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="febbf8e8823766a5875ebef99be9bc57" Selector="&lt;html htmlwindowname='{}' title='Permit Library 1 - Compliance Waste Returns Jul to Sep 2020.xls' /&gt;" UiBrowser="[browserDMS]">
-                        <ui:BrowserScope.Body>
-                          <ActivityAction x:TypeArguments="x:Object">
+            <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="484,51" sap2010:WorkflowViewState.IdRef="CommentOut_1">
+              <ui:CommentOut.Body>
+                <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="655,542" sap2010:WorkflowViewState.IdRef="Sequence_18">
+                  <sap:WorkflowViewStateService.ViewState>
+                    <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                      <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                    </scg:Dictionary>
+                  </sap:WorkflowViewStateService.ViewState>
+                  <If Condition="[browserDMS Is Nothing]" sap:VirtualizedContainerService.HintSize="613,450" sap2010:WorkflowViewState.IdRef="If_4">
+                    <If.Then>
+                      <usa:SharepointApplicationScope ClientContext="{x:Null}" LoginTimeout="{x:Null}" Password="{x:Null}" DisplayName="Sharepoint application scope" sap:VirtualizedContainerService.HintSize="468,303" sap2010:WorkflowViewState.IdRef="SharepointApplicationScope_1" QueryGrouping="False" ResetCredentials="False" SecurePassword="[IN_strDMSPassword]" SharePointInstanceType="Online" URL="[strDMSHomeUrl]" UserName="[IN_strDMSUsername]">
+                        <usa:SharepointApplicationScope.Body>
+                          <ActivityAction x:TypeArguments="us:SharePointContextInfo">
                             <ActivityAction.Argument>
-                              <DelegateInArgument x:TypeArguments="x:Object" Name="ContextTarget" />
+                              <DelegateInArgument x:TypeArguments="us:SharePointContextInfo" Name="SharePointContextInfoTag" />
                             </ActivityAction.Argument>
+                            <ui:BrowserScope Browser="{x:Null}" SearchScope="{x:Null}" TimeoutMS="{x:Null}" BrowserType="IE" DisplayName="Attach Browser 'iexplore.exe Document'" sap:VirtualizedContainerService.HintSize="434,161" sap2010:WorkflowViewState.IdRef="BrowserScope_1" InformativeScreenshot="febbf8e8823766a5875ebef99be9bc57" Selector="&lt;html htmlwindowname='{}' title='Permit Library 1 - Compliance Waste Returns Jul to Sep 2020.xls' /&gt;" UiBrowser="[browserDMS]">
+                              <ui:BrowserScope.Body>
+                                <ActivityAction x:TypeArguments="x:Object">
+                                  <ActivityAction.Argument>
+                                    <DelegateInArgument x:TypeArguments="x:Object" Name="ContextTarget" />
+                                  </ActivityAction.Argument>
+                                </ActivityAction>
+                              </ui:BrowserScope.Body>
+                            </ui:BrowserScope>
                           </ActivityAction>
-                        </ui:BrowserScope.Body>
-                      </ui:BrowserScope>
-                    </ActivityAction>
-                  </usa:SharepointApplicationScope.Body>
-                </usa:SharepointApplicationScope>
-              </If.Then>
-            </If>
-            <Sequence sap:VirtualizedContainerService.HintSize="613,352" sap2010:WorkflowViewState.IdRef="Sequence_17">
+                        </usa:SharepointApplicationScope.Body>
+                      </usa:SharepointApplicationScope>
+                    </If.Then>
+                  </If>
+                </Sequence>
+              </ui:CommentOut.Body>
+              <sap:WorkflowViewStateService.ViewState>
+                <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                  <x:Boolean x:Key="IsExpanded">False</x:Boolean>
+                  <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                </scg:Dictionary>
+              </sap:WorkflowViewStateService.ViewState>
+            </ui:CommentOut>
+            <Sequence sap:VirtualizedContainerService.HintSize="484,352" sap2010:WorkflowViewState.IdRef="Sequence_17">
               <sap:WorkflowViewStateService.ViewState>
                 <scg:Dictionary x:TypeArguments="x:String, x:Object">
                   <x:Boolean x:Key="IsExpanded">True</x:Boolean>
