--- a/EA Waste Tonnage Returns/Logic Workflows/DMS/Upload Email To DMS.xaml
+++ b/EA Waste Tonnage Returns/Logic Workflows/DMS/Upload Email To DMS.xaml
@@ -1,4 +1,4 @@
-<Activity mc:Ignorable="sap sap2010" x:Class="Upload_Email_To_DMS" this:Upload_Email_To_DMS.IN_strFullPermitNumber="68506" this:Upload_Email_To_DMS.IN_strReturnYear="2020" this:Upload_Email_To_DMS.IN_strReturnPeriodForRename="Jul to Sep" this:Upload_Email_To_DMS.IN_strDocumentUrl="/sites/EADMSRobotics1/LIB1/68506/Returns/Compliance Waste Returns Jul to Sep 2020 - Email and Submission.msg" this:Upload_Email_To_DMS.IN_strDocumentFilePath="C:\Users\Mewinter\Desktop\Working Directory\Email.msg" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:ss="clr-namespace:System.Security;assembly=mscorlib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:us="clr-namespace:UiPathTeam.SharePoint;assembly=UiPathTeam.SharePoint" xmlns:usa="clr-namespace:UiPathTeam.SharePoint.Activities;assembly=UiPathTeam.SharePoint.Activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+<Activity mc:Ignorable="sap sap2010" x:Class="Upload_Email_To_DMS" this:Upload_Email_To_DMS.IN_strFullPermitNumber="68506" this:Upload_Email_To_DMS.IN_strReturnYear="2019" this:Upload_Email_To_DMS.IN_strReturnPeriodForRename="Jul to Sep" this:Upload_Email_To_DMS.IN_strDocumentUrl="/sites/EADMSRobotics1/LIB1/68506/Returns/Compliance Waste Returns Jul to Sep 2019 - Email and Submission.msg" this:Upload_Email_To_DMS.IN_strDocumentFilePath="C:\Users\Mewinter\Desktop\Working Directory\Email.msg" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:av="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities" xmlns:s="clr-namespace:System;assembly=mscorlib" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=mscorlib" xmlns:ss="clr-namespace:System.Security;assembly=mscorlib" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:us="clr-namespace:UiPathTeam.SharePoint;assembly=UiPathTeam.SharePoint" xmlns:usa="clr-namespace:UiPathTeam.SharePoint.Activities;assembly=UiPathTeam.SharePoint.Activities" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="IN_dictConfig" Type="InArgument(scg:Dictionary(x:String, ui:GenericValue))" />
     <x:Property Name="IN_strDMSUsername" Type="InArgument(x:String)" />
@@ -130,36 +130,16 @@
             </sap:WorkflowViewStateService.ViewState>
             <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Upload File To DMS Workflow" sap:VirtualizedContainerService.HintSize="357,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="Data Workflows\DMS\Upload File To DMS.xaml">
               <ui:InvokeWorkflowFile.Arguments>
-                <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">
-                  <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" ExpressionText="IN_dictConfig" />
-                </InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSHomeUrl">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strDMSHomeUrl" />
-                </InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSUsername">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="IN_strDMSUsername" />
-                </InArgument>
-                <InArgument x:TypeArguments="ss:SecureString" x:Key="IN_strDMSPassword">
-                  <mva:VisualBasicValue x:TypeArguments="ss:SecureString" ExpressionText="IN_strDMSPassword" />
-                </InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="IN_strReturnFolderUrl">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strReturnFolderUrl" />
-                </InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="IN_strFullPermitNumber">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="IN_strFullPermitNumber" />
-                </InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSSiteUrl">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strDMSSiteUrl" />
-                </InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="IN_strDocumentUrl">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="IN_strDocumentUrl" />
-                </InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="IN_strDocumentFilePath">
-                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="IN_strDocumentFilePath" />
-                </InArgument>
-                <OutArgument x:TypeArguments="ui:Browser" x:Key="OUT_browserDMS">
-                  <mva:VisualBasicReference x:TypeArguments="ui:Browser" ExpressionText="browserDMS" />
-                </OutArgument>
+                <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">[IN_dictConfig]</InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSHomeUrl">[strDMSHomeUrl]</InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSUsername">[IN_strDMSUsername]</InArgument>
+                <InArgument x:TypeArguments="ss:SecureString" x:Key="IN_strDMSPassword">[IN_strDMSPassword]</InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="IN_strReturnFolderUrl">[strReturnFolderUrl]</InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="IN_strFullPermitNumber">[IN_strFullPermitNumber]</InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSSiteUrl">[strDMSSiteUrl]</InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="IN_strDocumentUrl">[IN_strDocumentUrl]</InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="IN_strDocumentFilePath">[IN_strDocumentFilePath]</InArgument>
+                <OutArgument x:TypeArguments="ui:Browser" x:Key="OUT_browserDMS">[browserDMS]</OutArgument>
               </ui:InvokeWorkflowFile.Arguments>
             </ui:InvokeWorkflowFile>
             <Assign DisplayName="Reset Retry Counter" sap:VirtualizedContainerService.HintSize="357,60" sap2010:WorkflowViewState.IdRef="Assign_4">
@@ -308,33 +288,15 @@
                             </sap:WorkflowViewStateService.ViewState>
                             <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke Input File Properties Workflow" sap:VirtualizedContainerService.HintSize="358,112" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="Data Workflows\DMS\Input File Properties.xaml">
                               <ui:InvokeWorkflowFile.Arguments>
-                                <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">
-                                  <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" ExpressionText="IN_dictConfig" />
-                                </InArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSHomeUrl">
-                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="strDMSHomeUrl" />
-                                </InArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSUsername">
-                                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="IN_strDMSUsername" />
-                                </InArgument>
-                                <InArgument x:TypeArguments="ss:SecureString" x:Key="IN_strDMSPassword">
-                                  <mva:VisualBasicValue x:TypeArguments="ss:SecureString" ExpressionText="IN_strDMSPassword" />
-                                </InArgument>
-                                <InArgument x:TypeArguments="ui:Browser" x:Key="IN_browserDMS">
-                                  <mva:VisualBasicValue x:TypeArguments="ui:Browser" ExpressionText="browserDMS" />
-                                </InArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDocumentDate">
-                                  <Literal x:TypeArguments="x:String">15/04/2021</Literal>
-                                </InArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strReceivedDate">
-                                  <Literal x:TypeArguments="x:String">15/04/2021</Literal>
-                                </InArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strExternalAuthor">
-                                  <Literal x:TypeArguments="x:String">Marcey Winter</Literal>
-                                </InArgument>
-                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDisclosureStatus">
-                                  <Literal x:TypeArguments="x:String">Internal Only</Literal>
-                                </InArgument>
+                                <InArgument x:TypeArguments="scg:Dictionary(x:String, ui:GenericValue)" x:Key="IN_dictConfig">[IN_dictConfig]</InArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSHomeUrl">[strDMSHomeUrl]</InArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDMSUsername">[IN_strDMSUsername]</InArgument>
+                                <InArgument x:TypeArguments="ss:SecureString" x:Key="IN_strDMSPassword">[IN_strDMSPassword]</InArgument>
+                                <InArgument x:TypeArguments="ui:Browser" x:Key="IN_browserDMS">[browserDMS]</InArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDocumentDate">15/04/2021</InArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strReceivedDate">15/04/2021</InArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strExternalAuthor">Marcey Winter</InArgument>
+                                <InArgument x:TypeArguments="x:String" x:Key="IN_strDisclosureStatus">Internal Only</InArgument>
                               </ui:InvokeWorkflowFile.Arguments>
                             </ui:InvokeWorkflowFile>
                             <Assign DisplayName="Reset Retry Counter" sap:VirtualizedContainerService.HintSize="358,60" sap2010:WorkflowViewState.IdRef="Assign_8">
